# cityscout

./: README.md  package.json
api/: Dockerfile  build.gradle.kts  gradle.properties  settings.gradle.kts
api/src/main/kotlin/app/cityscout/: Application.kt  OpenAI.kt
api/src/main/resources/: logback.xml
api/src/main/resources/schema/: cities.json  city-name.json  city.json  criterion.json  population.json  weather.json
api/src/test/kotlin/app/cityscout/: ApplicationTest.kt  OpenAITest.kt  (+1 more)
data/: .gitignore  pyproject.toml
data/census/: main.py
data/census/data/: abbr.csv  cities.csv
data/scrapy/: main.py  middlewares.py  pipelines.py  user-agents.txt
data/scrapy/spiders/: shutterstock.py
deploy/: .terraform.lock.hcl  all.tf  makefile  terraform.tfstate  terraform.tfstate.backup  variables.tf
deploy/.terraform/modules/: modules.json
web/: .gitignore  Dockerfile  jest.config.js  next.config.js  package.json
web/public/: logo.sketch
web/src/app/: layout.css  layout.tsx  page.tsx  providers.tsx
web/src/app/common/: footer.tsx  globals.css  header.tsx
web/src/app/explore/: Cities.tsx  City.tsx  Criteria.tsx  CriteriaNeededOverlay.tsx  Map.tsx  MoreCity.tsx  Tutorial.tsx  page.tsx  tips.json
web/src/app/explore/city/: Forecast.tsx  Stat.tsx
web/src/app/home/: Features.tsx  hero.tsx  pricing.tsx
web/src/core/: API.ts  Dependencies.ts  Explorer.ts  Storage.ts
web/src/core/__test__/: API.test.ts
web/src/model/: Cities.ts  City.ts  CityName.ts  Commute.ts  Criterion.ts  Housing.ts  MonthlyMeans.ts  Occupations.ts  Population.ts  Weather.ts
(+19 files in other folders)
