[tool.poetry]
name = "data"
version = "0.1.0"
description = ""
authors = ["Zack Manning <zack.manning@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Scrapy = "^2.9.0"
scrapy-playwright = "^0.0.26"
requests = "^2.31.0"
census = "^0.8.20"
pandas = "^2.0.1"
csv-to-sqlite = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
